modified style css

--- a/style.css
+++ b/style.css
@@ -34,13 +34,15 @@ body {
 
 .box {
   width: 450px;
-  background: rgba(0, 0, 0, 0.4);
+  /* background: rgba(0, 0, 0, 0.4); */
+  background-color: rgba(255, 255, 255, 0.692);
   padding: 40px;
   text-align: center;
   margin: auto;
   margin-top: 5%;
-  color: white;
+  color: black;
   font-family: "Poppins";
+  border-radius: 10%;
 }
 
 .box-img {
@@ -78,7 +80,7 @@ ul {
 }
 
 .box li a {
-  color: rgb(178, 243, 0);
+  color: rgb(23, 201, 7);
   text-decoration: none;
   font-size: 35px;
   transition: all ease-in-out 250ms;
